fix(code-quality): apply Java code review fixes
- JwtTokenProvider: remove System.out.println debug print, replace string
  concatenation logs with {} placeholders, deduplicate authority logging,
  use e.getClaims() directly in validateToken to avoid re-parsing expired token
- PushService: add @Slf4j and log.error() in silent catch block
- GuideService: null-safe location access in findGuidesNear (NPE fix),
  change per-guide loop logging from INFO to DEBUG
- MediaController: fix string concatenation in log.info call
- MediaService: replace Collectors.toList() with .toList() (Java 17)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>